@@ -1,3 +1,4 @@
+* #1888 Fix opening items from the clipboard. (tomeu)
 * #1984 Fix removing items from the clipboard. (tomeu)
 
 Snapshot b83a9ec27d
